update to 26.2